[gd_scene load_steps=3 format=3 uid="uid://c2nisbdtehnis"]

[ext_resource type="Texture2D" uid="uid://3p6b4avt2bdc" path="res://Assets/sprites/poo1LeftSpawner.png" id="1_pewis"]
[ext_resource type="Script" uid="uid://nivtwy7outfv" path="res://Scripts/pooSpawner.gd" id="1_rbws7"]

[node name="Poo1LeftSpawner" type="Node2D"]
script = ExtResource("1_rbws7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pewis")

[node name="poo1Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="poo2Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="poo3Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="poo4Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="clock" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="poo1Timer" to="." method="_on_poo_1_timer_timeout"]
[connection signal="timeout" from="poo2Timer" to="." method="_on_poo_2_timer_timeout"]
[connection signal="timeout" from="poo3Timer" to="." method="_on_poo_3_timer_timeout"]
[connection signal="timeout" from="poo4Timer" to="." method="_on_poo_4_timer_timeout"]
[connection signal="timeout" from="clock" to="." method="_on_clock_timeout"]
